--- a/sass/partials/_nav-main-lg.scss
+++ b/sass/partials/_nav-main-lg.scss
@@ -92,7 +92,7 @@ $link-sub-padding: 12px;
         z-index: 1;
         &:before {
             // Arrow
-            top: 10px;
+            top: 11px;
             
         }
 
